Added visit pre-order algo on tree

--- a/include/sanelli/tree/impl/CMakeLists.txt
+++ b/include/sanelli/tree/impl/CMakeLists.txt
@@ -1,5 +1,7 @@
 target_sources(sanelli
     PRIVATE
         node.hpp    
-        exception.hpp 
+        exception.hpp
+        algorithm.hpp
+        output.hpp
 )
