Started implementation of automaton
Basic implementation of data structure, output to graphviz and algorithm for joining and disjoining two automaton.

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -3,5 +3,6 @@ target_sources(testme
         test.cpp
 )
 
-add_subdirectory(tree)
 add_subdirectory(sanelli)
+add_subdirectory(tree)
+add_subdirectory(automa)
