Added match algorithm for automaton
Also fixed the cretion of the automaton using the and, or, star and plus operation

--- a/include/sanelli/CMakeLists.txt
+++ b/include/sanelli/CMakeLists.txt
@@ -3,6 +3,8 @@ target_sources(sanelli
         sanelli.hpp
 )
 
+add_subdirectory(debug)
 add_subdirectory(tree)
 add_subdirectory(regexp)
+add_subdirectory(automa)
 
