Moved in code from gasp
Moved in code that I initially wrote for sanelli/gasp (string, IO, parser, tokenizer, debugger). Last commit to be using the original code from gasp should be sanelli/gasp@3b933bc3c92197a23d7c6e50625449e6775a99f0.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,10 +10,10 @@ add_subdirectory(libs)
 
 # Manage sanelli lib
 add_library(sanelli "")
+set_target_properties(sanelli PROPERTIES LINKER_LANGUAGE CXX)
 add_subdirectory(include)
 add_subdirectory(src)
 target_include_directories(sanelli PUBLIC include)
-
 
 # Manage test executable
 add_executable(testme "")
