--- a/include/sanelli/CMakeLists.txt
+++ b/include/sanelli/CMakeLists.txt
@@ -7,4 +7,6 @@ add_subdirectory(debug)
 add_subdirectory(tree)
 add_subdirectory(automa)
 add_subdirectory(string)
+add_subdirectory(parser)
+add_subdirectory(tokenizer)
 
