--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,17 +8,18 @@ set(CMAKE_CXX_EXTENSIONS OFF)
 # Manage libraries
 add_subdirectory(libs)
 
-# Manage sanelli lib
-add_library(sanelli "")
-set_target_properties(sanelli PROPERTIES LINKER_LANGUAGE CXX)
+# Manage libsanelli lib
+add_library(libsanelli SHARED "")
+set_target_properties(libsanelli PROPERTIES LINKER_LANGUAGE CXX)
+set_target_properties(libsanelli PROPERTIES PREFIX "")
 add_subdirectory(include)
 add_subdirectory(src)
-target_include_directories(sanelli PUBLIC include)
+target_include_directories(libsanelli PUBLIC include)
 
 # Manage test executable
 add_executable(sanelli-test "")
 target_link_libraries(sanelli-test Catch2::Catch2)
-target_link_libraries(sanelli-test sanelli)
+target_link_libraries(sanelli-test libsanelli)
 
 add_subdirectory(test)
 target_include_directories(sanelli-test PUBLIC ${CMAKE_CURRENT_LIST_DIR})
