Added memory management class

--- a/include/sanelli/CMakeLists.txt
+++ b/include/sanelli/CMakeLists.txt
@@ -9,4 +9,4 @@ add_subdirectory(automa)
 add_subdirectory(string)
 add_subdirectory(parser)
 add_subdirectory(tokenizer)
-
+add_subdirectory(memory)
