--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -9,3 +9,4 @@ add_subdirectory(tokenizer)
 add_subdirectory(parser)
 add_subdirectory(string)
 add_subdirectory(memory)
+add_subdirectory(algorithm)
