--- a/include/sanelli/CMakeLists.txt
+++ b/include/sanelli/CMakeLists.txt
@@ -13,3 +13,4 @@ add_subdirectory(memory)
 add_subdirectory(fuzzy)
 add_subdirectory(math)
 add_subdirectory(binary)
+add_subdirectory(shared-library)
